trying to calculate body height based on rotation of element

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body
     /* height: 100vh; */
     /* font-family: 'Poppins'; */
     overflow-x: hidden;
-    height: 25800px !important;
+    /* height: 25800px !important; */
 }
 
 .webgl
